--- a/app/config/config_test.yml
+++ b/app/config/config_test.yml
@@ -30,6 +30,6 @@ doctrine:
   orm:
     dql:
       datetime_functions:
-        YEAR: DoctrineExtensions\Query\Mysql\Year
-        MONTH: DoctrineExtensions\Query\Mysql\Month
-        DAY: DoctrineExtensions\Query\Mysql\Day
+        YEAR: DoctrineExtaensions\Query\Mysql\Year
+        MONTH: DoctrineExatensions\Query\Mysql\Month
+        DAY: DoctrineExteansions\Query\Mysql\Day
