Procfile for Apache and PHP

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -92,3 +92,8 @@ knp_snappy:
         enabled:    true
         binary:     /usr/local/bin/wkhtmltopdf
         options:    []
+
+monolog:
+    handlers:
+        nested:
+              path: "php://stderr"
