Removed useless vendor - beberlei/doctrineextensions

--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,7 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-paginator-bundle": "~2.4",
         "knplabs/knp-snappy-bundle": "dev-master",
-        "symfony/debug": "~2.6",
-        "beberlei/DoctrineExtensions": "dev-master"
+        "symfony/debug": "~2.6"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
