--- a/.travis.yml
+++ b/.travis.yml
@@ -5,20 +5,10 @@ php:
   - 5.4
   - 5.5
 
-env:
-  - SYMFONY_VERSION=2.2.*
-  - SYMFONY_VERSION=2.3.*
-  - SYMFONY_VERSION=dev-master
-
 before_script:
-  - composer require symfony/symfony:${SYMFONY_VERSION}
-  - vendor/symfony-cmf/testing/bin/travis/phpcr_odm_doctrine_dbal.sh
+  - composer install
 
 script: phpunit -c app/
 
 notifications:
   email: "gabrielmunumel@gmail.com"
-
-matrix:
-  allow_failures:
-    - env: SYMFONY_VERSION=dev-master
