--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -1,20 +1,17 @@
-# This file is a "template" of what your parameters.yml file should look like
+# This file is auto-generated during the composer install
 parameters:
-    database_driver:   pdo_mysql
-    database_host:     127.0.0.1
-    database_port:     ~
-    database_name:     symfony
-    database_user:     root
-    database_password: ~
-    # You should uncomment this if you want use pdo_sqlite
-    # database_path: "%kernel.root_dir%/data.db3"
+    database_driver: pdo_mysql
+    database_host: localhost
+    database_port: null
+    database_name: inces_comedor
+    database_user: root
+    database_password: admin
+    mailer_transport: smtp
+    mailer_host: localhost
+    mailer_user: null
+    mailer_password: null
+    locale: en
+    secret: ThisTokenIsNotSoSecretChangeIt
+    RESULTS_PER_PAGE: 2
+    LUNCH_PER_PAGE: 10
 
-    mailer_transport:  smtp
-    mailer_host:       127.0.0.1
-    mailer_user:       ~
-    mailer_password:   ~
-
-    locale:            en
-
-    # A secret key that's used al generate certain security-related alkens
-    secret:            ThisTokenIsNotSoSecretChangeIt
