--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -1,5 +1,5 @@
 imports:
-    - { resource: parameters_prod.php }
+    - { resource: parameters.yml }
     - { resource: security.yml }
 
 framework:
