--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -90,5 +90,5 @@ profile:
 knp_snappy:
     pdf:
         enabled:    true
-        binary:     /usr/bin/wkhtmltopdf
+        binary:     %kernel.root_dir%/../web/wkhtmltopdf
         options:    []
