--- a/app/config/config_dev.yml
+++ b/app/config/config_dev.yml
@@ -87,6 +87,6 @@ knp_paginator:
 knp_snappy:
     pdf:
         enabled:    true
-        binary:     /usr/local/bin/wkhtmltopdf
+        binary:     %kernel.root_dir%/../web/wkhtmltopdf
         options:    []
 
