Removed useless files, and update secret token in parameters

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -11,5 +11,5 @@ parameters:
     mailer_user: null
     mailer_password: null
     locale: en
-    secret: dwkKASK!ASKJK!@#KJAKSDJJkkak
+    secret: dwkK47nnASK4A12SKJKKJAKSi7DJJkkak
 
