--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -11,4 +11,4 @@ parameters:
     mailer_user: null
     mailer_password: null
     locale: en
-    secret: dwkKASK!ASKJK!@#KJAKSDJJkkak
+    secret: dwkK47nnASK4A12SKJKKJAKSi7DJJkkak
