Added mbstring and intl extension to composer. May them be added to php in Heroku

--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-paginator-bundle": "~2.4",
         "knplabs/knp-snappy-bundle": "dev-master",
-        "symfony/debug": "~2.6"
+        "symfony/debug": "~2.6",
+        "ext-mbstring": "*",
+        "ext-intl": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3",
