Changed path for wkhtmltopdf in config_prod

--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -90,7 +90,7 @@ knp_paginator:
 knp_snappy:
     pdf:
         enabled:    true
-        binary:     %kernel.root_dir%/../web/wkhtmltopdf
+        binary:     wkhtmltopdf
         options:    []
 
 monolog:
